extension - popup presents words

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -3,11 +3,13 @@
 <html>
   <head>
     <title>GTmetrix Analyzer</title>
-    <script src="jquery.min.js"></script>
-    <script src="popup.js"></script>
+    <script src="includes/js/jquery.min.js"></script>
+    <script src="includes/js/popup.js"></script>
+    <link rel="stylesheet" type="text/css" href="includes/css/stylePopup.css">
   </head>
   <body>
-    <h1>GTmetrix Analyzer</h1>
-    <button id="checkPage">Check this page now!</button>
+    <h1>Words</h1>
+    <ul>
+    </ul>
   </body>
 </html>
